tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ap-northeast-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0f95a261",
                    "NetworkAclId": "acl-7427451f",
                    "SubnetId": "subnet-418f6f1e"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0e95a260",
                    "NetworkAclId": "acl-7427451f",
                    "SubnetId": "subnet-a3d8cfef"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3195a25f",
                    "NetworkAclId": "acl-7427451f",
                    "SubnetId": "subnet-484ed233"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3095a25e",
                    "NetworkAclId": "acl-7427451f",
                    "SubnetId": "subnet-cc8320a7"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-7427451f",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-cdc879a6"
        }
    ]
}
