tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/ap-northeast-2/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-63a8a00b",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-300a905b",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "111111111111",
            "State": "available",
            "VpcId": "vpc-cdc879a6"
        }
    ]
}
